dfir_rs/tests/compile-fail-stable/surface_varname_undefined.rs
../compile-fail/surface_varname_undefined.rs